<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/movies_widget_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:text="@string/top_ten"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone" />

    <Button
        android:id="@+id/movie_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_me" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--StackView-->
        <ListView
            android:id="@+id/movie_widget_stack_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:loopViews="true" />

        <TextView
            android:id="@+id/movie_widget_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>
</LinearLayout>